Kube-vim gateway deployment
